--- a/test1/www/html/components/slider.html
+++ b/test1/www/html/components/slider.html
@@ -1,14 +1,10 @@
-<div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 1400px; height: 670px;">
-
-      <div u="slides" style="cursor: move; position: absolute; overflow: hidden; width: 1400px; height: 670px;">
-          <div><img u="image" src="{{ url_for('static', filename='images/slide1.jpg') }}" /></div>
-          <div><img u="image" src="{{ url_for('static', filename='images/slide2.jpg') }}" /></div>
-          <div><img u="image" src="{{ url_for('static', filename='images/slide3.jpg') }}" /></div>
-          <div><img u="image" src="{{ url_for('static', filename='images/slide4.jpg') }}" /></div>
-          <div><img u="image" src="{{ url_for('static', filename='images/slide5.jpg') }}" /></div>
-          <div><img u="image" src="{{ url_for('static', filename='images/slide6.jpg') }}" /></div>
-      </div>
-
+<div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 1400px; height: 223px; overflow: hidden;">
+  <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1400px; height: 223px; overflow: hidden;">
+    <div><img u="image" src="{{ url_for('static', filename='images/slide1.jpg') }}" /></div>
+    <div><img u="image" src="{{ url_for('static', filename='images/slide2.jpg') }}" /></div>
+    <div><img u="image" src="{{ url_for('static', filename='images/slide3.jpg') }}" /></div>
+    <div><img u="image" src="{{ url_for('static', filename='images/slide4.jpg') }}" /></div>
+    <div><img u="image" src="{{ url_for('static', filename='images/slide5.jpg') }}" /></div>
+    <div><img u="image" src="{{ url_for('static', filename='images/slide6.jpg') }}" /></div>
+  </div>
 </div>
-
-
